--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "IMG_6188.jpeg"
   name             : "Aster Winkler"
   pronouns         : # example: "she/her"  
   bio              : "Aster is a senior at Brown University pursuing a B.S.c in Astrophysics."
