--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ title                    : "Aster Winkler / CIERA REU Project"
 title_separator          : "-"
 name                     : &name "Aster Winkler"
 description              : &description "Aster is a senior at Brown University pursuing a B.S.c in Astrophysics."
-url                      : https://asterwinkler.github.io/projects # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : https://asterwinkler.github.io/project # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "asterwinkler.github.io"
+repository               : "asterwinkler/project.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
