--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Aster Winkler / CIERA REU Project"
+title                    : "Aster Winkler"
 title_separator          : "-"
 name                     : &name "Aster Winkler"
 description              : &description "Aster is a senior at Brown University pursuing a B.S.c in Astrophysics."
@@ -26,7 +26,7 @@ author:
   name             : "Aster Winkler"
   pronouns         : # example: "she/her"  
   bio              : "Aster is a senior at Brown University pursuing a B.S.c in Astrophysics."
-  location         : "Earth"
+  location         : "Providence, RI"
   employer         : "Brown University"
   uri              : # URL
   email            : "aster_winkler@brown.edu" 
@@ -46,7 +46,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "asterwinkler"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
@@ -120,7 +120,7 @@ staticman:
       options:
         format           : "iso8601" # "iso8601" (default), "timestamp-seconds", "timestamp-milliseconds"
 atom_feed:
-  hide                   : false     # change to true to hide the RSS feed in the footer
+  hide                   : true     # change to true to hide the RSS feed in the footer
   path                   : # blank (default) uses feed.xml
 
 
@@ -217,16 +217,16 @@ kramdown:
 # These settings control the types of collections used by the template
 collections:
   teaching:
-    output: true
+    output: false
     permalink: /:collection/:path/
   publications:
-    output: true
+    output: false
     permalink: /:collection/:path/
   portfolio:
-    output: true
+    output: false
     permalink: /:collection/:path/
   talks:
-    output: true
+    output: false
     permalink: /:collection/:path/
 
 
