--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ site_theme               : "default"
 title                    : "Aster Winkler"
 title_separator          : "-"
 name                     : &name "Aster Winkler"
-description              : &description "Aster is a senior at Brown University pursuing a B.S.c in Astrophysics."
+description              : &description "Aster is a senior at Brown University pursuing a B.S.c in astrophysics."
 url                      : https://asterwinkler.github.io/project # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "asterwinkler/project"
